--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                         <p>интернет агентство</p>
                     </div>
                     <ul>
-                        <li><a href="">УСЛУГИ</a></li>
-                        <li><a href="">КОНТАКТЫ</a></li>
+                        <li><a href="#section1">УСЛУГИ</a></li>
+                        <li><a href="#footer">КОНТАКТЫ</a></li>
                     </ul>
                     <button>Оставить заявку</button>
                 </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col3 col32">
                     <ul>
-                        <li><a href="">УСЛУГИ</a></li>
+                        <li><a href="#section1">УСЛУГИ</a></li>
                         <li><a href="">КОНТАКТЫ</a></li>
                         <li><a href="">НАШИ РАБОТЫ (СКОРО...)</a></li>
                     </ul>
