--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </nav>
             <div class="header">
-                <h1>Помогаем развивать онлайн-бизнес</h1>
+                <h1>Помогаем развивать онлайн бизнес</h1>
                 <p>Помогаем предприятиям систематизировать работу в онлайн, выстраивать комплексную автоматизацию и повышать эффективность.</p>
                 <button>Оставить заявку</button>
             </div>
