--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>7svn creative</title>
     <link rel="icon" href="7svn.svg">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animate.css">
 </head>
 <body>
     <header id="header">
         <div class="container">
             <nav>
-                <div class="row">
+                <div class="wow fadeIn row">
                     <div class="logo">
                         <img src="img/7svn.svg" alt="">
                         <p>интернет агентство</p>
@@ -24,7 +25,7 @@
                     <button>Оставить заявку</button>
                 </div>
             </nav>
-            <div class="header">
+            <div class="wow fadeIn header">
                 <h1>Помогаем развивать онлайн бизнес</h1>
                 <p>Помогаем предприятиям систематизировать работу в онлайн, выстраивать комплексную автоматизацию и повышать эффективность.</p>
                 <button>Оставить заявку</button>
@@ -33,49 +34,49 @@
     </header>
     <section id="section1">
         <div class="container">
-            <h2>НАШИ УСЛУГИ</h2>
+            <h2 class="wow fadeIn">НАШИ УСЛУГИ</h2>
             <div class="row">
-                <div class="col3">
+                <div class="wow fadeIn col3">
                     <img src="img/code.png" alt="">
                     <h1>Разработка сайтов</h1>
                     <p>Разработка сайтов любой сложности с уникальным дизайном: корпоративные сайты, порталы и сервисы. Гарантия. Поэтапная оплата.</p>
                 </div>
-                <div class="col3">
+                <div class="wow fadeIn col3">
                     <img src="img/logo.png" alt="">
                     <h1>Разработка логотипов</h1>
                     <p>Создаем креативные трендовые логотипы для компаний и брендов различной величины. Разрабатывая логотип, мы вкладываем смыслы и основной месседж бренда в символ, который поведет бизнес к успеху.</p>
                 </div>
-                <div class="col3">
-                    <img src="img/3d.png" alt="">
-                    <h1>3D Визуализация</h1>
-                    <p>3D визуализация и моделирование интерьера квартиры, офиса, ресторана. Визуализация интерьера в 3D max формате позволяет оценить полный вид будущего дизайна интерьера.</p>
+                <div class="wow fadeIn col3">
+                    <img class="wow fadeIn" src="img/3d.png" alt="">
+                    <h1 class="wow fadeIn">3D Визуализация</h1>
+                    <p class="wow fadeIn">3D визуализация и моделирование интерьера квартиры, офиса, ресторана. Визуализация интерьера в 3D max формате позволяет оценить полный вид будущего дизайна интерьера.</p>
                 </div>
             </div>
         </div>
     </section>
     <section id="section2">
         <div class="container">
-            <h2>Почему мы?</h2>
+            <h2 class="wow fadeIn">Почему мы?</h2>
             <div class="row">
-                <div class="col4">
+                <div class="wow fadeIn col4">
                     <h1>01</h1>
                     <div></div>
                     <h3>Доверие</h3>
                     <p>Вы можете нам поручить любые задачи по росту продаж: от создания сайта до всех видов digital-рекламы.</p>
                 </div>
-                <div class="col4">
+                <div class="wow fadeIn col4">
                     <h1>02</h1>
                     <div></div>
                     <h3>Клиенты</h3>
                     <p>Мы работаем с людьми, которые болеют за свой бизнес и хотят получить максимальную отдачу.</p>
                 </div>
-                <div class="col4">
+                <div class="wow fadeIn col4">
                     <h1>03</h1>
                     <div></div>
                     <h3>Гарантия</h3>
                     <p>Мы даем гарантию на разработанные нами сайты.</p>
                 </div>
-                <div class="col4">
+                <div class="wow fadeIn col4">
                     <h1>04</h1>
                     <div></div>
                     <h3>География</h3>
@@ -86,15 +87,15 @@
     </section>
     <section id="section3">
         <div class="container">
-            <h2>Нам уже доверяют</h2>
+            <h2 class="wow fadeIn">Нам уже доверяют</h2>
             <div class="row">
-                <div class="col1">
+                <div class="wow fadeIn col1">
                     <div class="company">
                         <img src="img/ao logo.png" alt="">
                         <h4>ABRAYLY ONUM</h4>
                     </div>
                 </div>
-                <div class="col1">
+                <div class="wow fadeIn col1">
                     <div class="company">
                         <img src="img/casetech.png" class="case">
                         <h4>CASE TECH TM</h4>
@@ -106,13 +107,13 @@
     <section id="section4">
         <div class="container">
             <div class="row">
-                <div class="col3">
+                <div class="wow fadeIn col3">
                     <h2>Хотите с нами работать?</h2>
                 </div>
-                <div class="col3">
+                <div class="wow fadeIn col3">
                     <h4>Пишите на <span>it.turkmen.web@gmail.com</span><br> или заполните форму</h4>
                 </div>
-                <div class="col3">
+                <div class="wow fadeIn col3">
                     <button>Оставить заявку</button>
                 </div>
             </div>
@@ -121,17 +122,17 @@
     <footer id="footer">
         <div class="container">
             <div class="row">
-                <div class="col3 col31">
+                <div class="wow fadeIn col3 col31">
                     <img src="img/7svn.svg" class="footer-logo">
                 </div>
-                <div class="col3 col32">
+                <div class="wow fadeIn col3 col32">
                     <ul>
                         <li><a href="#section1">УСЛУГИ</a></li>
                         <li><a href="">КОНТАКТЫ</a></li>
                         <li><a href="">НАШИ РАБОТЫ (СКОРО...)</a></li>
                     </ul>
                 </div>
-                <div class="col3 col33">
+                <div class="wow fadeIn col3 col33">
                     <div class="right">
                         <h4>+993 61 23-43-55</h4>
                         <div class="row2">
@@ -145,8 +146,15 @@
             </div>
         </div>
     </footer>
-    <div id="inner-footer">
+    <div class="wow fadeIn" id="inner-footer">
         Since 2022 - Ähli Hukuklar Goralan
     </div>
+
+    <!-- WOW JS -->
+
+    <script src="wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
