--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div id="fixed-absolute">
         <ul>
-            <li><a href=""><img src="img/tg.png" alt=""><p>Telegram</p></a></li>
-            <li><a href=""><img src="img/ig.png" class="ig" alt=""><p>Instagram</p></a></li>
-            <li><a href=""><img src="img/icq.png" class="icq" alt=""><p>Icq</p></a>
+            <li><a href="https://t.me/NabelliAdam"><img src="img/tg.png" alt=""><p>Telegram</p></a></li>
+            <li><a href="https://www.instagram.com/7svn.creative/"><img src="img/ig.png" class="ig" alt=""><p>Instagram</p></a></li>
+            <li><a href="https://icq.im/NabelliAdam"><img src="img/icq.png" class="icq" alt=""><p>Icq</p></a>
                 <li><a href=""><img src="img/gmail.png" class="gmail" alt=""><p>Gmail</p></a>
             </li>
         </ul>
